--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,4 +1,9 @@
+*{
+	font-family: 'Source Sans Pro', sans-serif;
+	color: #EEEEBB;
+}
 body {
+	position: relative;
 	margin: 0;
 	padding: 0;
 	background-image: url("../imgs/chicago.jpg");
@@ -7,27 +12,108 @@ body {
 
 }
 header{
-	background-color: #6688cc;
-	position: fixed;
-	z-index: 1;
+	background-color : transparent;
+	position: absolute;
+	z-index: 3;
 	width: 100%;
 	height: 5em;
 	color: #fff;
-	opacity: 0.1;
 
 }
 
 #namePlate{
+	position: fixed;
 	display: inline-block;
-	position: absolute;
-	z-index: 2;
-	width: 30em;
+	z-index: 3;
+	width: 16em;
 	height:100%;
-	margin-left: 5em;
+	margin-left: 3em;
+	margin-top:1em;
+	line-height: 10px;
 }
 
 #namePlate h1{
-	font-family: verdana;
-	font-size: 30px;
-	color: rgba(255,255,255,1.0);
+	font-size: 35px;
 }
+
+#namePlate h2{
+	font-size: 20px;
+}
+
+#navBackground{
+	position: fixed;
+	height: 5em;
+	right: 2em;
+	min-width: 28em;
+	background-color: #7788AA;
+	opacity: .6;
+}
+
+header ul{
+	position: fixed;
+	list-style-type: none;
+	right:2em;
+	z-index: 3;
+	margin:0;
+	overflow: hidden;
+}
+
+header li{
+	float:left;
+}
+
+header li a{
+	display: inline-block;
+	padding: 2em 1em;
+	font-size: 17px;
+	font-weight: 200;
+	line-height: 10px;
+	text-decoration: none;
+}
+
+header li a:hover{
+	color: #CCBB44;
+	border-bottom: 3px solid #CCBB44;
+}
+
+div.contentContainer{
+		position: absolute;
+		clear: both;
+		top:7em;
+		background-color: #111144;
+		width:70%;
+		height: 28em;
+		float: both;
+		z-index: 2;
+		margin: 1% 15% 7%;
+		opacity: .6;
+}
+
+div.content{
+		position: absolute;
+		clear: both;
+		top:7em;
+		width:70%;
+		float: both;
+		z-index: 2;
+		margin: 1% 15% 7%;
+}
+
+div.content h1{
+	text-align: center;
+	margin: 1em;
+}
+
+div.content p{
+	margin: 2em;
+}
+
+footer{
+	position: fixed;
+	width: 100%;
+	bottom: 0px;
+	left: 0px;
+	clear: both;
+	text-align: center;
+}
+
