--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -99,12 +99,14 @@ div.content{
 }
 
 div.content h1{
-	text-align: center;
-	margin: 1em;
+	text-align: left;
+	margin: 2em 0em 0em 2em;
+	font-size: 19px;
+
 }
 
 div.content p{
-	margin: 2em;
+	margin: 0em 2em 0em 2em;
 }
 
 footer{
