--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -10,6 +10,13 @@
 	margin: 1em;
 }
 
+div.content h1{
+	text-align: left;
+	margin: 2em 0em 0em 2em;
+	font-size: 19px;
+
+}
+
 div.content h2{
 	text-align: left;
 	margin: .5em 0em .5em 2em;
