--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -2,7 +2,7 @@
 	display: inline-block;
 	position: absolute;
 	background-color: #B5A9BB;
-	z-index: 3;
+	z-index: -1;
 	opacity: .3;
 	height: 26em;
 	width: 95%;
@@ -35,13 +35,29 @@ div.content h4{
 	font-style: bold;
 	margin-left: 2em;
 }
+
 #scrollBox{
-	height: 10em;
+	height: 7em;
 	width:90%;
 	top:11em;
 	margin: 0em 2em 0em 2em;
 	border: 3px solid black;
-	overflow-y:scroll;
+	overflow-y:auto;
+	z-index: 10;
+}
+
+
+#scrollBox a{
+	display: inline-block;
+	height: 1em;
+}
+
+#scrollBox a div{
+	position: relative;
+	width:100%;
+	height:100%;
+	display: block;
+
 }
 table{
 	height: 10em;
@@ -49,6 +65,7 @@ table{
 	background-color: rgba(136,119,136,.5);
 	top:11em;
 	border-collapse: collapse;
+	z-index:5;
 }
 
 table, tr, td{
@@ -57,4 +74,5 @@ table, tr, td{
 	text-align: left;
 	vertical-align: bottom;
 	font-size: 19px;
+	z-index: 4;
 }
