--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,5 +1,5 @@
 *{
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: shareTech;
 	color: #000000;
 }
 
@@ -89,50 +89,24 @@ nav{
 	padding-left: 50px;
 }
 
-#resumeContainer{
-	position: relative;
-	width: 100%;
-	height: 500px;
-	background-color: #484E52;
+@font-face {
+    font-family: shareTech;
+    src: url(fonts/shareTechFont.woff);
 }
 
-#resumeContentContainer{
-	display: inline-block;
-	position: relative;
-	width: 100%;
-	background-color: green;
+@font-face {
+    font-family: shareBold;
+    src: url(fonts/shareBoldFont.woff);
 }
 
-.resumeTitle{
-	position: relative;
-	display: block;
-	height: 50px;
-	width: 100%;
-	min-width: 100px;
-	background-color: pink;
-	clear:both;
-	text-align: center;
-}
-
-
-.skillContainer{
-	position: relative;
-	display: inline-block;
-	width: 33.33%;
-	min-width: 300px;
-	height: 100%;
-	float: left;
-	background-color: blue;
-}
-
-ul{
-}
 
 h3{
+	font-family: shareTech;
+	font-size: 23px;
 	position: absolute;
 	color: #fb9b2b;
-	text-decoration: underline;
-	margin-left: 30px
+	margin-left: 40px;
+	padding-top: 0px;
 }
 
 
