--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -12,19 +12,43 @@
 	margin-left: 30px;
 }
 
+#summaryContainer{
+	display: inline-block;
+	position: relative;
+	width: 38%;
+	margin-left: 30px;
+}
+
+#topContainer{
+	display: inline-block;
+	position:relative;
+	/*START HERE*/
+	top: 80px;
+	max-width: 35%;
+	margin-left: 30px;
+	overflow-y: auto;
+}
+
+#skillsContainer{
+	display: inline-block;
+	position: relative;
+	width: 50%;
+}
+
 .resumeTitle{
 	position: relative;
 	display: block;
 	height: 50px;
 	width: 100%;
-	min-width: 100px;
 	clear:both;
 	text-align: center;
 }
 
+
+
 hr {
-	width: 100%;
-	left: 0px;
+	width: 90%;
+	margin-left: 0;
 	border-style: solid; 
 	border-color: #fb9b2b; 
 	border-width: 7px 0 0 ; 
@@ -35,20 +59,32 @@ hr {
 .skillContainer{
 	position: relative;
 	display: inline-block;
-	width: 33.33%;
-	min-width: 300px;
-	max-width: 600;
-	height: 100%;
+	min-width: 190px;
+	max-width: 800;
 	float: left;
 }
 
-.skillContainer h4{
+#shortContainer{
+	position: relative;
+	display: inline-block;
+	min-width: 130px;
+	max-width: 800px;
+	float: left;
+}
+
+.skillContainer,#shortContainer h4{
 	font-family: shareBold;
 }
 
-.skillContainer ul{
+.skillContainer,#shortContainer ul{
 	list-style: none;
 	padding-left: 0px;
+}
+
+.experienceContainer{
+	min-width:200px;
+	max-width:1000px;
+	top: 0px;
 }
 
 .experienceTitle{
