--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -21,8 +21,7 @@
 
 #topContainer{
 	display: inline-block;
-	position:relative;
-	/*START HERE*/
+	position:fixed;
 	top: 80px;
 	max-width: 35%;
 	margin-left: 30px;
@@ -87,7 +86,7 @@ hr {
 	top: 0px;
 }
 
-.experienceTitle{
+.resumeSectionTitle{
 	display: inline-block;
 	top: 0px;
 }
@@ -97,19 +96,14 @@ hr {
 	display: inline-block;
 }
 
-.experienceDetails{
+
+
+.resumeSectionDetails{
 	display: inline-block;
 	float:right;
 }
 
-.educationTitle{
-	display: inline-block;
-}
 
-.educationDetails{
-	display: inline-block;
-	float:right;
-}
 
 h4{
 	font-size: 20px;
