--- a/stylesheets/resume.sass
+++ b/stylesheets/resume.sass
@@ -15,22 +15,22 @@
   display: inline-block
   position: relative
   margin: 0px 30px 0px 40px
-  width: 500px
-  transform: translate(0%, -30%)
+  width: 400px
+  transform: translate(0%, -15%)
 
-.topContainer
-  display: inline-block
-  position: absoulute
-  top: 0px
-  overflow-y: auto
+
 
 #skillsContainer
   display: inline-block
   position: relative
-  top: 0 px
   width: 570 px
   margin-left: 30px
 
+.topContainer
+  display: inline-block
+  position: absoulute
+  overflow-y: auto
+  float: left
 
 .resumeTitle
   position: relative
