--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -25,15 +25,16 @@ body
 nav
   top: 0px
   margin: 0 auto
-  width: 300px
+  width: 223px
   height: 100%
   background-color: $highlight-orange
 
 .navButton
   position: relative
+  margin: 0px 2px 0px 2px
   padding: 0px 5px 0px 5px
   height: 100%
-  width: 65px
+  width: 60px
   background-color: black
   float: left
   border: 2px black
@@ -50,21 +51,43 @@ nav
   background-attachment: fixed
 
 #bioContainer
+  display:inline-block
+  position: relative
   height: 200px
-  width: 1160px
+  width: 100%
   background-color: $light-grey
   padding-right: 40px
+  float:left
   p
     margin-top: 0px
     padding-top: 15px
     color: black
 
 .sectionTitle
+  display:inline-block
   position: relative
   height: 100%
-  width: 20%
+  width: 13%
   text-align: center
   float: left
+
+.sectionText
+  display:inline
+  position: relative
+  height: 100%
+  width: 65%
+  text-align: center
+  float: left
+
+.sectionContact
+  display:inline
+  position: relative
+  height: 100%
+  width: 15%
+  text-align: center
+  float: left
+  ul
+    list-style: none
 
 
 
