--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -21,21 +21,20 @@
   display: inline-block;
   position: relative;
   margin: 0px 30px 0px 40px;
-  width: 500px;
-  transform: translate(0%, -30%); }
-
-.topContainer {
-  display: inline-block;
-  position: absoulute;
-  top: 0px;
-  overflow-y: auto; }
+  width: 400px;
+  transform: translate(0%, -15%); }
 
 #skillsContainer {
   display: inline-block;
   position: relative;
-  top: 0 px;
   width: 570 px;
   margin-left: 30px; }
+
+.topContainer {
+  display: inline-block;
+  position: absoulute;
+  overflow-y: auto;
+  float: left; }
 
 .resumeTitle {
   position: relative;
