--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -49,6 +49,7 @@ nav
   width: 100%
   background-image: url("../imgs/chicago.jpg")
   background-attachment: fixed
+  margin-top: 20px
 
 #bioContainer
   display:inline-block
@@ -56,7 +57,6 @@ nav
   height: 200px
   width: 100%
   background-color: $light-grey
-  padding-right: 40px
   float:left
   p
     margin-top: 0px
